fix gray contrast

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   --kg-color-primary: #00ff92;
   --kg-color-secondary: #ff0048;
   --kg-color-black: #000811;
-  --kg-color-gray: #283544;
+  --kg-color-gray: #3d4c5e;
   --kg-color-white: #fff;
 }
 
